tests/invalid/list_comparison_ordering/main.py
a: list[int] = [1, 2]
b: list[int] = [3, 4]
c: bool = a < b
